--- a/index.html
+++ b/index.html
@@ -52,7 +52,6 @@ Note:
 
     * "A free and open source interactive HTTPS proxy" (MIT License)
     * Created by [Aldo Cortesi, Maximilian Hils and Thomas Kriechbaumer, et al. in 2010](https://mitmproxy.org/publications/)
-    * Gets updates regularly ([HTTP/3](https://mitmproxy.org/posts/releases/mitmproxy10/), [Proxy through Wireguard](https://mitmproxy.org/posts/wireguard-mode/))  
     * Scope of this talk is mitmproxy and Android
     * Motivation for me: C3-Talks by Christopher Weatherhead et al. ([1](https://media.ccc.de/v/35c3-9941-how_facebook_tracks_you_on_android#t=375), [2](https://media.ccc.de/v/36c3-10693-no_body_s_business_but_mine_a_dive_into_menstruation_apps#t=770A))
      
@@ -140,6 +139,7 @@ Note:
     2. You can use mitmproxy through a CLI (`mitmproxy`), browser (`mitmweb`) or programmatically (`mitmdump`)
     2. How to set up mitmproxy with an Android emulator
     3. Learn more on https://docs.mitmproxy.org/
+      * Regularly gets new features ([HTTP/3](https://mitmproxy.org/posts/releases/mitmproxy10/), [Proxy through Wireguard](https://mitmproxy.org/posts/wireguard-mode/))  
 
 Note:
     ---
