Left Page number

--- a/index.html
+++ b/index.html
@@ -15,7 +15,15 @@
     <style>
 .reveal .slide-number {
   font-size: 30pt;
-  color: #ffffff; }
+  color: #ffffff; 
+  background-color: rgba(0,0,0,0.0);
+}
+  .slide-number, .reveal.has-logo .slide-number {
+  bottom: 20px !important;
+  left: 20px !important;
+  top: unset !important;
+  }
+
    </style>
 	</head>
 	<body>
